fix: resolve list collapse and adjust UI for touch devices (#64)
* fix: prevent list collapse during drag on touch devices

* feat: adjust Header and TaskList sizes for touch devices

--- a/src/components/App/App.module.scss
+++ b/src/components/App/App.module.scss
@@ -1,14 +1,21 @@
 .wrapper {
   width: 100%;
-  min-height: 100vh; // fallback
-  min-height: 100svh;
-  overflow: hidden;
+  height: 100vh; // fallback
+  height: 100svh;
   display: flex;
   flex-direction: column;
   align-items: center;
 }
 
 .tasksContainer {
+  flex: 1;
   width: 95%;
-  margin-bottom: 20px;
+  padding-bottom: 20px;
+
+  @include touch-supported {
+    // Fix dnd list collapse on touch devices.
+    // Requires body overflow to be hidden.
+    overflow-y: auto;
+    overscroll-behavior: none;
+  }
 }
