--- a/src/components/TaskList/TaskList.module.scss
+++ b/src/components/TaskList/TaskList.module.scss
@@ -39,7 +39,7 @@
 
 @media (max-width: $tablet) {
   .title {
-    font-size: 24px;
+    font-size: 22px;
   }
 
   .noTasks {
