--- a/src/styles/_base.scss
+++ b/src/styles/_base.scss
@@ -1,3 +1,5 @@
+@use "mixins" as *;
+
 *,
 *::before,
 *::after {
@@ -24,6 +26,12 @@ body {
   background-color: var(--theme-bg-main);
   color: var(--theme-text-main);
   font-family: "Lato", sans-serif;
+
+  @include touch-supported {
+    // Fix dnd list collapse on touch devices.
+    // Must be paired with a scrollable tasks container.
+    overflow: hidden;
+  }
 }
 
 button {
