--- a/src/styles/_mixins.scss
+++ b/src/styles/_mixins.scss
@@ -15,3 +15,9 @@
     @content;
   }
 }
+
+@mixin touch-supported {
+  @media (pointer: coarse) {
+    @content;
+  }
+}
